# SimpleTwitchChatBot

./: CMakeLists.txt  README.md  conanfile.txt
src/: auth_data.cpp  auth_data.h  ca_sertificates_loader.cpp  ca_sertificates_loader.h  chat_bot.cpp  chat_bot.h  command.cpp  command.h  command_executor.cpp  command_executor.h  connection.cpp  connection.h  domain.h  irc_client.cpp  irc_client.h  logging.cpp  logging.h  main.cpp  message.cpp  message.h  message_handler.cpp  message_handler.h  message_processor.cpp  message_processor.h  request_validator.h  user_validator.cpp  user_validator.h
